# rffl-tools

./: .env.example  .github-setup.md  .gitignore  AUDIT_SUMMARY.md  CLAUDE.md  DETAILED_AUDIT_REPORT.md  KORM.md  LICENSE  MIGRATION.md  README.md  REPOSITORY_AUDIT.md  push-to-github.sh  pyproject.toml
.cursor/commands/: code-quality-check.md  data-export-workflow.md  docs-update.md  inbox-cleanup.md  investigation-setup.md  run-tests.md  season-data-audit.md  session-aar.md
data/end_of_season_rosters/: final_roster_2011.csv  final_roster_2012.csv  final_roster_2013.csv  final_roster_2014.csv  final_roster_2015.csv  final_roster_2016.csv  final_roster_2017.csv  final_roster_2018.csv
data/reference/: rffl_history_collections_payouts.csv
data/roster_changes/: estimated_historical_patterns.csv  estimated_historical_patterns_analysis.txt  roster_changes_2011-2017.csv  roster_changes_2017.csv  roster_changes_2017_test.csv  schedule_pattern_analysis.csv  schedule_pattern_analysis_analysis.txt  weekly_changes_2019-2022_fixed.csv  weekly_changes_2019-2024.csv  weekly_changes_2024.csv
data/teams/: README.md  (+11 more)
docs/: ORPHANED_FILES_CLEANUP.md  README.md  TEAM_DATA_COMPLETE_AUDIT.md  TEAM_REGISTRY_MIGRATION.md
experimental/: README.md
inbox/: README.md
scripts/: README.md  archive_orphaned_team_files.py  audit_draft_files.py  extract_all_transactions.py  fill_completed_season.py  filter_stat_corrections.py  generate_canonical_teams_csv.py  scaffold_season.py
tests/: conftest.py  test_api.py  test_export.py  test_korm_processor.py  test_loader.py  test_validation.py
(+198 files in other folders)
